update with 7 changes

--- a/note/html-minifier.html
+++ b/note/html-minifier.html
@@ -6,9 +6,9 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <link rel="stylesheet" href="/static/style.min.css" />
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
-<title>html-minifier - Seorenn Note</title>
-<meta name="twitter:title" content="html-minifier" />
-<meta name="og:title" content="html-minifier" />
+<title>HTMLMinifier - Seorenn Note</title>
+<meta name="twitter:title" content="HTMLMinifier" />
+<meta name="og:title" content="HTMLMinifier" />
 <meta name="description" content="HTML 압축기 html-minifier의 간단한 소개" />
 <meta name="twitter:description" content="HTML 압축기 html-minifier의 간단한 소개" />
 <meta name="og:description" content="HTML 압축기 html-minifier의 간단한 소개" />
@@ -56,8 +56,8 @@
 </div>
 <section class="content">
 <header>
-<h1>html-minifier</h1>
-<div class="title-date">2020년 6월 9일 수정</div>
+<h1>HTMLMinifier</h1>
+<div class="title-date">2020년 6월 10일 수정</div>
 </header>
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
@@ -69,7 +69,7 @@
 </div>
 </div>
 <p>
-html-minifier는 이름에서 느낄 수 있듯이
+HTMLMinifier는 이름에서 느낄 수 있듯이
 <a href="html.html">HTML</a> 코드를 압축하기 위한 <a href="javascript.html">Javascript</a> 패키지
 겸 <a href="cli.html">CLI</a> 도구다.
 </p>
