--- a/note/javascript.html
+++ b/note/javascript.html
@@ -498,16 +498,16 @@ targetElement.parentNode.insertBefore(newElement, targetElement)
 <hr /><h1>이 글을 링크하는 글들</h1>
 <div class="article-link">
 <div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/uglify-js.html">UglifyJS</a></h2>
+<h2><a class="article-link-title" href="/note/html-minifier.html">HTMLMinifier</a></h2>
 <div class="article-link-date">
 2020년 6월 10일 수정</div>
 </div>
 </div>
 <div class="article-link">
 <div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/html-minifier.html">html-minifier</a></h2>
+<h2><a class="article-link-title" href="/note/uglify-js.html">UglifyJS</a></h2>
 <div class="article-link-date">
-2020년 6월 9일 수정</div>
+2020년 6월 10일 수정</div>
 </div>
 </div>
 <div class="article-link">
