--- a/note/appkit.html
+++ b/note/appkit.html
@@ -6,14 +6,14 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <link rel="stylesheet" href="/static/style.min.css" />
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
-<title>NeXTSTEP - Seorenn Note</title>
-<meta name="twitter:title" content="NeXTSTEP" />
-<meta name="og:title" content="NeXTSTEP" />
-<meta name="description" content="NeXTSTEP(넥스트스텝)" />
-<meta name="twitter:description" content="NeXTSTEP(넥스트스텝)" />
-<meta name="og:description" content="NeXTSTEP(넥스트스텝)" />
-<link rel="canonical" href="https://seorenn.github.io/note/nextstep.html" />
-<meta property="og:url" content="https://seorenn.github.io/note/nextstep.html" />
+<title>AppKit - Seorenn Note</title>
+<meta name="twitter:title" content="AppKit" />
+<meta name="og:title" content="AppKit" />
+<meta name="description" content="macOS용 UI 프레임워크 AppKit 관련 글 모음" />
+<meta name="twitter:description" content="macOS용 UI 프레임워크 AppKit 관련 글 모음" />
+<meta name="og:description" content="macOS용 UI 프레임워크 AppKit 관련 글 모음" />
+<link rel="canonical" href="https://seorenn.github.io/note/appkit.html" />
+<meta property="og:url" content="https://seorenn.github.io/note/appkit.html" />
 <link rel="shortcut icon" type="image/x-icon" href="/static/favicon.ico" />
 <meta name="twitter:image"content="https://seorenn.github.io/static/seorenn-symbol.png" />
 <meta property="og:image" content="https://seorenn.github.io/static/seorenn-symbol.png" />
@@ -56,32 +56,68 @@
 </div>
 <section class="content">
 <header>
-<h1>NeXTSTEP</h1>
-<div class="title-date">2020년 5월 21일 수정</div>
+<h1>AppKit</h1>
+<div class="title-date">2020년 6월 11일 수정</div>
 </header>
+<div id="table-of-contents">
+<h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
+<ul>
+<li><a href="#7f22b149">NSView 화면을 PNG로 캡처하기</a></li>
+</ul>
+</div>
+</div>
 <p>
-<a href="apple.html">애플</a> 공동 설립자인 스티브 잡스가 설립한 회사인 NeXT에서 만든 OS다.
-맥의 운영체제인 <a href="macos.html">macOS</a>, 그리고 그 전신인 OS X의 기반이 되는 OS이기도 하다.
-따라서 당연하게도 BSD 커널 기반의 유닉스 계열 운영체제다.
+Cocoa Framework의 실질적인 프레임워크 이름이기도 하다.
+실질적으로 코코아 기반 앱을 제작할 때 임포트해야 하는 모듈 이름이다.
+</p>
+
+<div class="org-src-container">
+<pre class="src src-swift"><span style="color: #51afef;">import</span> AppKit
+</pre>
+</div>
+
+<p>
+특징적으로 <a href="nextstep.html">NeXTSTEP</a>에서 발전해 온 관계로
+클래스 이름 앞에 <code>NS</code> prefix가 붙어있다.
+예를 들어 뷰 클래스는 <code>NSView</code> 와 같은 이름을 가진다.
 </p>
 
 <p>
-GUI 운영체제로써 완성도가 제법 높아서 GUI 설계 조차 <a href="macos.html">macOS</a>에 큰 영향을 끼쳤다.
-각 애플리케이션의 확장자가 <code>.app</code> 으로 끝나는 점에서 부터
-독(Dock)의 시초에 해당하는 것 까지 다양한 유사점이 있다.
+Cocoa Touch와 혼동하지 말자.
+Cocoa Touch은 <a href="ios.html">iOS</a>용 프레임워크이고
+실질적인 이름으로 <a href="uikit.html">UIKit</a>과 관련이 있다.
 </p>
 
+<div id="outline-container-7f22b149" class="outline-2">
+<h2 id="7f22b149">NSView 화면을 PNG로 캡처하기</h2>
+<div class="outline-text-2" id="text-7f22b149">
 <p>
-약간 생소한 <a href="objective-c.html">Objective-C</a>라는 언어로 작성된 점이 특이하다.
+아래의 코드로 특정 NSView 화면을 캡처해서 PNG 데이터로 얻을 수 있다.
 </p>
-
+<div class="org-src-container">
+<pre class="src src-swift"><span style="color: #51afef;">func</span> <span style="color: #c678dd;">captureView</span>(view: NSView) -&gt; <span style="color: #c678dd;">Data</span>? {
+  <span style="color: #51afef;">let</span> rep = view.<span style="color: #c678dd;">bitmapImageRepForCachingDisplay</span>(<span style="color: #51afef;">in</span>: view.<span style="color: #dcaeea;">bounds</span>)!
+  view.<span style="color: #c678dd;">cacheDisplay</span>(<span style="color: #51afef;">in</span>: view.<span style="color: #dcaeea;">bounds</span>, to: rep)
+  <span style="color: #51afef;">return</span> rep.<span style="color: #c678dd;">representation</span>(using: .<span style="color: #dcaeea;">png</span>, properties: [:])
+}
+</pre>
+</div>
 <p>
-OS X이나 <a href="macos.html">macOS</a>의 전신인 만큼,
-이들 최신 OS의 개발 프레임워크를 보면 많은 유산이 남아있다.
-특히 Cocoa(AppKit)나 Cocoa Touch(UIKit) 쪽의 클래스들이 전부 <code>NS</code> 라는 이름으로 시작한다는 것이 가장 인상에 남는다.
-물론 NS는 NeXTSTEP의 약자임을 쉽게 알 수 있다.
-다만 <a href="swift.html">Swift</a> 언어로 넘어오면서 이 NS라는 접두어는 점점 사라져 가는 추세이기는 하다.
+결과물을 <code>NSImage</code> 로 가공하고 싶다면 딱 적당한 생성자가 있다.
 </p>
+<div class="org-src-container">
+<pre class="src src-swift"><span style="color: #51afef;">let</span> image = <span style="color: #c678dd;">NSImage</span>(data: data)
+</pre>
+</div>
+<p>
+결과물을 파일로 저장하고 싶다면 <code>Data</code> 에서 제공하는 API를 활용하자.
+</p>
+<div class="org-src-container">
+<pre class="src src-swift"><span style="color: #51afef;">try</span>! data?.<span style="color: #c678dd;">write</span>(to: fileURL)
+</pre>
+</div>
+</div>
+</div>
 <div class="mid-ad-container">
 <ins class="adsbygoogle mid-ad"
      style="display:block"
@@ -97,23 +133,9 @@ OS X이나 <a href="macos.html">macOS</a>의 전신인 만큼,
 <hr /><h1>이 글을 링크하는 글들</h1>
 <div class="article-link">
 <div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/appkit.html">AppKit</a></h2>
+<h2><a class="article-link-title" href="/note/uikit.html">UIKit</a></h2>
 <div class="article-link-date">
 2020년 6월 11일 수정</div>
-</div>
-</div>
-<div class="article-link">
-<div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/objective-c.html">Objective-C</a></h2>
-<div class="article-link-date">
-2020년 5월 30일 수정</div>
-</div>
-</div>
-<div class="article-link">
-<div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/macos.html">macOS</a></h2>
-<div class="article-link-date">
-2020년 5월 19일 수정</div>
 </div>
 </div>
 </div>
