--- a/note/uikit.html
+++ b/note/uikit.html
@@ -6,14 +6,14 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <link rel="stylesheet" href="/static/style.min.css" />
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
-<title>NeXTSTEP - Seorenn Note</title>
-<meta name="twitter:title" content="NeXTSTEP" />
-<meta name="og:title" content="NeXTSTEP" />
-<meta name="description" content="NeXTSTEP(넥스트스텝)" />
-<meta name="twitter:description" content="NeXTSTEP(넥스트스텝)" />
-<meta name="og:description" content="NeXTSTEP(넥스트스텝)" />
-<link rel="canonical" href="https://seorenn.github.io/note/nextstep.html" />
-<meta property="og:url" content="https://seorenn.github.io/note/nextstep.html" />
+<title>UIKit - Seorenn Note</title>
+<meta name="twitter:title" content="UIKit" />
+<meta name="og:title" content="UIKit" />
+<meta name="description" content="iOS UI 프레임워크 UIKit 관련글 모음" />
+<meta name="twitter:description" content="iOS UI 프레임워크 UIKit 관련글 모음" />
+<meta name="og:description" content="iOS UI 프레임워크 UIKit 관련글 모음" />
+<link rel="canonical" href="https://seorenn.github.io/note/uikit.html" />
+<meta property="og:url" content="https://seorenn.github.io/note/uikit.html" />
 <link rel="shortcut icon" type="image/x-icon" href="/static/favicon.ico" />
 <meta name="twitter:image"content="https://seorenn.github.io/static/seorenn-symbol.png" />
 <meta property="og:image" content="https://seorenn.github.io/static/seorenn-symbol.png" />
@@ -56,31 +56,30 @@
 </div>
 <section class="content">
 <header>
-<h1>NeXTSTEP</h1>
-<div class="title-date">2020년 5월 21일 수정</div>
+<h1>UIKit</h1>
+<div class="title-date">2020년 6월 11일 수정</div>
 </header>
 <p>
-<a href="apple.html">애플</a> 공동 설립자인 스티브 잡스가 설립한 회사인 NeXT에서 만든 OS다.
-맥의 운영체제인 <a href="macos.html">macOS</a>, 그리고 그 전신인 OS X의 기반이 되는 OS이기도 하다.
-따라서 당연하게도 BSD 커널 기반의 유닉스 계열 운영체제다.
+UIKit은 <a href="ios.html">iOS</a>용 UI 프레임워크로
+사싱상 아이폰 앱을 만든다면 꼭 필요한 프레임워크 이름이다.
+</p>
+
+<div class="org-src-container">
+<pre class="src src-swift"><span style="color: #51afef;">import</span> UIKit
+</pre>
+</div>
+
+<p>
+다른 이름으로 Cocoa Touch라고 부르기도 한다.
+Cocoa(<a href="appkit.html">AppKit</a>)를 모바일 터치 인터페이스 용도로 포팅(?)한 것이라
+이름이 이렇게 붙은 것 같다.
 </p>
 
 <p>
-GUI 운영체제로써 완성도가 제법 높아서 GUI 설계 조차 <a href="macos.html">macOS</a>에 큰 영향을 끼쳤다.
-각 애플리케이션의 확장자가 <code>.app</code> 으로 끝나는 점에서 부터
-독(Dock)의 시초에 해당하는 것 까지 다양한 유사점이 있다.
-</p>
-
-<p>
-약간 생소한 <a href="objective-c.html">Objective-C</a>라는 언어로 작성된 점이 특이하다.
-</p>
-
-<p>
-OS X이나 <a href="macos.html">macOS</a>의 전신인 만큼,
-이들 최신 OS의 개발 프레임워크를 보면 많은 유산이 남아있다.
-특히 Cocoa(AppKit)나 Cocoa Touch(UIKit) 쪽의 클래스들이 전부 <code>NS</code> 라는 이름으로 시작한다는 것이 가장 인상에 남는다.
-물론 NS는 NeXTSTEP의 약자임을 쉽게 알 수 있다.
-다만 <a href="swift.html">Swift</a> 언어로 넘어오면서 이 NS라는 접두어는 점점 사라져 가는 추세이기는 하다.
+<a href="appkit.html">AppKit</a>과 확연하게 다른 점은
+터치 인터페이스 위주로 구성되어 있다는 점도 있겠지만,
+각 클래스의 prefix가 UI로 시작된다는 점이다.
+예를 들어 뷰 컨트롤러 클래스 이름은 <code>UIViewController</code> 다.
 </p>
 <div class="mid-ad-container">
 <ins class="adsbygoogle mid-ad"
@@ -100,20 +99,6 @@ OS X이나 <a href="macos.html">macOS</a>의 전신인 만큼,
 <h2><a class="article-link-title" href="/note/appkit.html">AppKit</a></h2>
 <div class="article-link-date">
 2020년 6월 11일 수정</div>
-</div>
-</div>
-<div class="article-link">
-<div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/objective-c.html">Objective-C</a></h2>
-<div class="article-link-date">
-2020년 5월 30일 수정</div>
-</div>
-</div>
-<div class="article-link">
-<div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/macos.html">macOS</a></h2>
-<div class="article-link-date">
-2020년 5월 19일 수정</div>
 </div>
 </div>
 </div>
