--- a/note/appkit.html
+++ b/note/appkit.html
@@ -67,6 +67,7 @@
 </div>
 </div>
 <p>
+<a href="macos.html">macOS</a>용 앱 UI 프레임워크 이름이다.
 Cocoa Framework의 실질적인 프레임워크 이름이기도 하다.
 실질적으로 코코아 기반 앱을 제작할 때 임포트해야 하는 모듈 이름이다.
 </p>
