--- a/note/javascript.html
+++ b/note/javascript.html
@@ -57,7 +57,7 @@
 <section class="content">
 <header>
 <h1>Javascript</h1>
-<div class="title-date">2020년 6월 4일 수정</div>
+<div class="title-date">2020년 6월 13일 수정</div>
 </header>
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
@@ -68,6 +68,11 @@
 <li><a href="#811ee247">튜플 비슷한 문법</a></li>
 <li><a href="#e525fa55">For Each</a></li>
 <li><a href="#8ebf91db">Object(Dictionary) vs Map</a></li>
+</ul>
+</li>
+<li><a href="#cb841aba">논리식</a>
+<ul>
+<li><a href="#99bff694">동일 여부 판단식</a></li>
 </ul>
 </li>
 <li><a href="#e905cbf0">문자열(String)</a>
@@ -342,6 +347,39 @@ console.log(map.size);
 <li>열거 시 키 순서가 입력된 순서대로 나타난다.</li>
 <li>순수한 자료구조 용도의 객체이기 때문에 키를 마음껏 사용할 수 있다.</li>
 </ul>
+</div>
+</div>
+</div>
+<div id="outline-container-cb841aba" class="outline-2">
+<h2 id="cb841aba">논리식</h2>
+<div class="outline-text-2" id="text-cb841aba">
+</div>
+<div id="outline-container-99bff694" class="outline-3">
+<h3 id="99bff694">동일 여부 판단식</h3>
+<div class="outline-text-3" id="text-99bff694">
+<p>
+자바스크립트에서 두 식이 동일한지 비교할 때는 다른 언어들과는 다르게
+두 가지 오퍼레이터 중 하나를 사용할 수 있다.
+</p>
+<div class="org-src-container">
+<pre class="src src-javascript">&gt; <span style="color: #51afef;">let</span> <span style="color: #dcaeea;">a</span> = <span style="color: #da8548; font-weight: bold;">1</span>
+&gt; <span style="color: #51afef;">let</span> <span style="color: #dcaeea;">b</span> = <span style="color: #98be65;">'1'</span>
+&gt; a == b
+<span style="color: #a9a1e1;">true</span>
+&gt; a === b
+<span style="color: #a9a1e1;">false</span>
+</pre>
+</div>
+<p>
+<code>==</code> 와 <code>===</code> 는 둘 다 같음을 비교하기 위한 오퍼레이터다.
+하지만 결과에 차이가 있는데, <code>==</code> 는 값(value)을 비교하기 위한 오퍼레이터고,
+<code>===</code> 는 값과 함께 타입(types)도 비교하는 오퍼레이터다.
+</p>
+
+<p>
+비슷하게 같지 않다라는 의미로 <code>!=</code> 와 <code>!==</code> 가 있는데 위와 같이
+값만 비교하냐 타입도 비교하냐의 차이가 있다.
+</p>
 </div>
 </div>
 </div>
