--- a/note/javascript.html
+++ b/note/javascript.html
@@ -259,12 +259,50 @@ rest에는 <code>[2, 3, 4, 5]</code> 가 들어간다.
 <p>
 <code>==</code> 와 <code>===</code> 는 둘 다 같음을 비교하기 위한 오퍼레이터다.
 하지만 결과에 차이가 있는데, <code>==</code> 는 값(value)을 비교하기 위한 오퍼레이터고,
-<code>===</code> 는 값과 함께 타입(types)도 비교하는 오퍼레이터다.
+<code>===</code> 는 값과 함께 타입(types)과 레퍼런스(references)도 비교하는 오퍼레이터다.
 </p>
 
 <p>
 비슷하게 같지 않다라는 의미로 <code>!=</code> 와 <code>!==</code> 가 있는데 위와 같이
-값만 비교하냐 타입도 비교하냐의 차이가 있다.
+값만 비교하냐 그 외의 것들(?)도 비교하냐의 차이가 있다.
+</p>
+
+<p>
+그런데 값을 비교한다고 하는 것도 반드시 통하는 것은 아니다.
+조금 다른 예제도 보자.
+</p>
+<div class="org-src-container">
+<pre class="src src-javascript">&gt; <span style="color: #51afef;">let</span> <span style="color: #dcaeea;">a</span> = {age: <span style="color: #da8548; font-weight: bold;">18</span>}
+&gt; <span style="color: #51afef;">let</span> <span style="color: #dcaeea;">b</span> = {age: <span style="color: #da8548; font-weight: bold;">18</span>}
+&gt; a == b
+<span style="color: #a9a1e1;">false</span>
+&gt; a === b
+<span style="color: #a9a1e1;">false</span>
+</pre>
+</div>
+<p>
+아까와는 다른 결과에 더러운 느낌을 받는데,
+<code>==</code> 는 값을 비교하는데, 여기서는 객체의 레퍼런스를 비교한다.
+그리고 <code>a</code> 와 <code>b</code> 는 다른 레퍼런스로 만들어졌으니 둘은 다르다.
+물론 <code>===</code> 로 모든 것의 같은지 비교하는 것은 자연스럽게 거짓이 된다.
+그래서 아래와 같이 레퍼런스 대입을 사용하면 또 다른 결과를 볼 수 있다.
+</p>
+<div class="org-src-container">
+<pre class="src src-javascript">&gt; b = a
+{ age: <span style="color: #da8548; font-weight: bold;">18</span> }
+&gt; a == b
+<span style="color: #a9a1e1;">true</span>
+&gt; a === b
+<span style="color: #a9a1e1;">true</span>
+</pre>
+</div>
+<p>
+더럽다고 느끼면 정상이다. 자바스크립트는 더럽고 치사하다.
+</p>
+
+<p>
+결과적으로 문자열과 숫자의 비교에서만 값에 의한 비교를 허용하고 있다고 볼 수 있다.
+아마도 다른 언어에 익숙하다면 매우 조심해야 할 함정이다.
 </p>
 </div>
 </div>
