update with 9 changes

--- a/note/web-dev-links.html
+++ b/note/web-dev-links.html
@@ -57,7 +57,7 @@
 <section class="content">
 <header>
 <h1>웹 개발 관련 링크</h1>
-<div class="title-date">2020년 4월 25일 수정</div>
+<div class="title-date">2020년 6월 13일 수정</div>
 </header>
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
@@ -200,7 +200,7 @@ C로 구현된 임베디드 자바스크립트
 엔진? 의존성도 좋고 C 혹은 호환되는 언어들과 궁합이 좋은 듯. ES5, ES5.1,
 ES6(일부), ES7(일부) 지원.</li>
 <li><a target="_blank" href="https://github.com/jakubroztocil/httpie">🌏HTTPie</a>:
-curl을 대체할 수 있는
+<a href="curl.html">Curl</a>을 대체할 수 있는
 현대적인 HTTP Request/Response 유틸리티.</li>
 <li><a target="_blank" href="https://velog.io/@public_danuel/process-env-on-node-js">🌏Node.js 기반에서 환경변수 사용하기 (dotenv, cross-env)</a>:
 환경 변수(Environment Variable), Node.js에서 사용하는 방법 정리.</li>
