--- a/note/index.html
+++ b/note/index.html
@@ -58,6 +58,20 @@
 <h1><i class="material-icons md-light">list_alt</i> NOTE의 모든 글</h1>
 <div class="article-link">
 <div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/web-dev-links.html">웹 개발 관련 링크</a></h2>
+<div class="article-link-date">
+2020년 6월 13일 수정</div>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/curl.html">Curl</a></h2>
+<div class="article-link-date">
+2020년 6월 13일 수정</div>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/javascript.html">Javascript</a></h2>
 <div class="article-link-date">
 2020년 6월 13일 수정</div>
@@ -521,13 +535,6 @@
 <div class="article-link">
 <div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/object.html">오브젝트</a></h2>
-<div class="article-link-date">
-2020년 4월 25일 수정</div>
-</div>
-</div>
-<div class="article-link">
-<div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/web-dev-links.html">웹 개발 관련 링크</a></h2>
 <div class="article-link-date">
 2020년 4월 25일 수정</div>
 </div>
