update with 4 changes

--- a/note/curl.html
+++ b/note/curl.html
@@ -78,7 +78,14 @@
 </div>
 </div>
 <p>
-Curl은 URL로 데이터를 전송하는 데 사용하는 <a href="cli.html">CLI</a> 도구다.
+Curl은 URL을 이용해 데이터를 전송하는 데 사용하는 <a href="cli.html">CLI</a> 도구다.
+</p>
+
+<p>
+뭐&#x2026; 이런 소개는 별 의미는 없는 것 같다.
+그냥 사이트에 어떤 리퀘스트를 보내서 내용물을 받거나,
+웹에서 파일을 다운로드 받거나,
+서버가 잘 동작하는 지 테스트 용도으로 종종 사용하는 유틸리티다.
 </p>
 
 <div id="outline-container-f6c3e57e" class="outline-2">
