update with 4 changes

--- a/note/web-dev-links.html
+++ b/note/web-dev-links.html
@@ -57,7 +57,7 @@
 <section class="content">
 <header>
 <h1>웹 개발 관련 링크</h1>
-<div class="title-date">2020년 6월 13일 수정</div>
+<div class="title-date">2020년 6월 15일 수정</div>
 </header>
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
@@ -205,6 +205,7 @@ ES6(일부), ES7(일부) 지원.</li>
 <li><a target="_blank" href="https://velog.io/@public_danuel/process-env-on-node-js">🌏Node.js 기반에서 환경변수 사용하기 (dotenv, cross-env)</a>:
 환경 변수(Environment Variable), Node.js에서 사용하는 방법 정리.</li>
 <li><a target="_blank" href="https://738.github.io/clean-code-typescript/">🌏🚿 타입스크립트를 위한 클린코드 - 한글 번역판 🇰🇷</a></li>
+<li><a target="_blank" href="https://www.colorhexa.com/">🌏Color Hexa</a>: 다양한 색상 정보</li>
 </ul>
 </div>
 </div>
