update with 9 changes

--- a/note/english-note.html
+++ b/note/english-note.html
@@ -57,7 +57,7 @@
 <section class="content">
 <header>
 <h1>영어 노트</h1>
-<div class="title-date">2020년 5월 26일 수정</div>
+<div class="title-date">2020년 6월 15일 수정</div>
 </header>
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
@@ -68,6 +68,11 @@
 <li><a href="#d8debfd8">차량 탑승 시 on과 in</a></li>
 <li><a href="#d6c98c4d">기타 짧은 표현 메모들</a></li>
 <li><a href="#4dfaffa3">영어 월</a></li>
+<li><a href="#91b372e3">기타 단어들</a>
+<ul>
+<li><a href="#40475dc6">present vs current</a></li>
+</ul>
+</li>
 </ul>
 </div>
 </div>
@@ -239,6 +244,27 @@ You are in a car
 <li>11 November NOV</li>
 <li>12 December DEC</li>
 </ul>
+</div>
+</div>
+<div id="outline-container-91b372e3" class="outline-2">
+<h2 id="91b372e3">기타 단어들</h2>
+<div class="outline-text-2" id="text-91b372e3">
+</div>
+<div id="outline-container-40475dc6" class="outline-3">
+<h3 id="40475dc6">present vs current</h3>
+<div class="outline-text-3" id="text-40475dc6">
+<p>
+present는 시간 상 현재를 의미한다. 예를 들어 present day 라고 하면 현재 시각을 의미한다. '즉시' 라는 의미에 가깝다.
+</p>
+
+<p>
+비슷하지만 다른 current는 기간 내에서 현재 시점을 의미한다. 예를 들어 current situtation 라고 말 그대로 현재 상황을 의미한다.
+</p>
+
+<p>
+따라서 동의어가 아니다. 섞어서 쓰면 혼동을 줄 수 있으니 조심하자.
+</p>
+</div>
 </div>
 </div>
 <div class="mid-ad-container">
