--- a/note/javascript.html
+++ b/note/javascript.html
@@ -57,7 +57,7 @@
 <section class="content">
 <header>
 <h1>Javascript</h1>
-<div class="title-date">2020년 6월 13일 수정</div>
+<div class="title-date">2020년 6월 15일 수정</div>
 </header>
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
@@ -543,6 +543,7 @@ targetElement.parentNode.insertBefore(newElement, targetElement)
 <ul class="org-ul">
 <li><a target="_blank" href="https://ko.javascript.info/">🌏모던 JavaScript 튜토리얼</a></li>
 <li><a target="_blank" href="https://junhobaik.github.io/es2016-es2020/">🌏ECMAScript ES2016~ES2020 정리</a></li>
+<li><a target="_blank" href="https://github.com/Jam3/math-as-code">🌏Math as Code</a>: 수식을 어떻게 표현하는지에 관한 설명의 자바스크립트 버전</li>
 </ul>
 </div>
 </div>
