--- a/note/python.html
+++ b/note/python.html
@@ -57,7 +57,7 @@
 <section class="content">
 <header>
 <h1>Python</h1>
-<div class="title-date">2020년 6월 12일 수정</div>
+<div class="title-date">2020년 6월 15일 수정</div>
 </header>
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
@@ -505,6 +505,8 @@ Python 3 부터 사용 가능한 커맨드다.
 <ul class="org-ul">
 <li><a target="_blank" href="https://seorenn.tistory.com/76">🌏Python에 F-string 이라는 게 있었다?</a></li>
 <li><a target="_blank" href="https://seorenn.tistory.com/77">🌏Python 3 정적 타이핑 소개 및 소감(?)</a></li>
+<li><a target="_blank" href="https://mathtocode.com/">🌏Math to Code</a>: Numpy 수식 교육용 인터랙티브 자료. 엔지니어 대상이라 퀴즈 해답을 코드를 입력하는 방식이다.</li>
+<li><a target="_blank" href="https://github.com/Jam3/math-as-code/blob/master/PYTHON-README.md">🌏Math as Code</a>: 수식을 코드로 어떻게 표현하는 지에 관한 설명의 파이썬 버전</li>
 </ul>
 </div>
 </div>
@@ -525,7 +527,7 @@ Python 3 부터 사용 가능한 커맨드다.
 <div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/javascript.html">Javascript</a></h2>
 <div class="article-link-date">
-2020년 6월 13일 수정</div>
+2020년 6월 15일 수정</div>
 </div>
 </div>
 <div class="article-link">
