--- a/note/doom-emacs.html
+++ b/note/doom-emacs.html
@@ -57,7 +57,7 @@
 <section class="content">
 <header>
 <h1>Doom Emacs</h1>
-<div class="title-date">2020년 6월 10일 수정</div>
+<div class="title-date">2020년 6월 15일 수정</div>
 </header>
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
@@ -75,11 +75,13 @@
 <li><a href="#b37da8d5">이모티콘 입력기</a></li>
 <li><a href="#ff8a8396">프로젝트 추가하기</a></li>
 <li><a href="#1473040d">컬러 테마 커스터마이징</a></li>
+<li><a href="#5c0e1c8c">visual-line-mode와 커서 이동</a></li>
 </ul>
 </li>
 <li><a href="#89e15078">문제 해결</a>
 <ul>
 <li><a href="#215d2f92">Package error</a></li>
+<li><a href="#afca1c0e">if: No catch for tag: emacs-version-changed, nil</a></li>
 </ul>
 </li>
 <li><a href="#867ded23">관련글</a></li>
@@ -295,6 +297,25 @@ sync가 완료된 후 <a href="emacs.html">Emacs</a>를 재시작하고
 </p>
 </div>
 </div>
+<div id="outline-container-5c0e1c8c" class="outline-3">
+<h3 id="5c0e1c8c">visual-line-mode와 커서 이동</h3>
+<div class="outline-text-3" id="text-5c0e1c8c">
+<p>
+<code>visual-line-mode</code> 가 켜졌을 때 커서 키를 위 혹은 아래로 이동시키는 경우 visual wrap된 라인을 그대로 통과해버리고 만다. 즉 물리적으로 다음 혹은 이전 라인으로 커서를 이동시키기 때문에 가상으로 줄바꿈된 것을 인지하지 못 하도 통과해 버리는 것이다.
+</p>
+
+<p>
+이 경우 아래 코드를 <code>~/.doom.d/init.el</code> 최상단에 넣어놓자.
+</p>
+<div class="org-src-container">
+<pre class="src src-emacs-lisp"><span style="color: #51afef;">(</span><span style="color: #51afef;">setq</span> <span style="color: #dcaeea;">evil-respect-visual-line-mode</span> t<span style="color: #51afef;">)</span>
+</pre>
+</div>
+<p>
+왜 하필 <code>config.el</code> 도 아니고 <code>init.l</code> 의 최상단이냐 하면, 관련된 모든 설정이 로드되기 전에 정의되어 있어야만 효과가 나타나기 때문이다.
+</p>
+</div>
+</div>
 </div>
 <div id="outline-container-89e15078" class="outline-2">
 <h2 id="89e15078">문제 해결</h2>
@@ -336,6 +357,36 @@ Package error: (error Could not find package hover in recipe repositories: (org-
 </div>
 <p>
 이후 문제가 사라졌다.
+</p>
+</div>
+</div>
+<div id="outline-container-afca1c0e" class="outline-3">
+<h3 id="afca1c0e">if: No catch for tag: emacs-version-changed, nil</h3>
+<div class="outline-text-3" id="text-afca1c0e">
+<p>
+가끔 <a href="emacs.html">Emacs</a>를 업그레이드 한 후 아래와 같은 에러 메시지를 만나는 경우가 있다.
+</p>
+<div class="org-src-container">
+<pre class="src src-text">if: No catch for tag: emacs-version-changed, nil
+</pre>
+</div>
+<p>
+이 경우 straight가 현재 버전과 다른 버전으로 컴파일된 경우일 가능성이 높다. 공식 저장소 이슈에선 <code>upgrade</code> 커맨드가 해결해 줄거라고 한다.
+</p>
+<div class="org-src-container">
+<pre class="src src-bash">~/.emacs.d/bin/doom upgrade
+</pre>
+</div>
+<p>
+하지만 개인적으로는 이 방법으로 문제가 해결되지 않았다. 그래서 문제의 원흉(?)인 straight를 날리고 다시 설치를 시도했다.
+</p>
+<div class="org-src-container">
+<pre class="src src-bash"><span style="color: #ECBE7B;">rm</span> -rf ~/.emacs.d/.local/straight
+~/.emacs.d/bin/doom install
+</pre>
+</div>
+<p>
+이 조치 후 문제는 사라졌다.
 </p>
 </div>
 </div>
