update with 15 changes

--- a/note/apple.html
+++ b/note/apple.html
@@ -162,6 +162,20 @@ iTunes 혹은 앱스토어(Appstore) 같은 소프트웨어 생태계에도 큰 
 <hr /><h1>이 글을 링크하는 글들</h1>
 <div class="article-link">
 <div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/swift.html">Swift</a></h2>
+<div class="article-link-date">
+2020년 6월 16일 수정</div>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/arc.html">ARC</a></h2>
+<div class="article-link-date">
+2020년 6월 16일 수정</div>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/xcode.html">Xcode</a></h2>
 <div class="article-link-date">
 2020년 5월 29일 수정</div>
@@ -172,13 +186,6 @@ iTunes 혹은 앱스토어(Appstore) 같은 소프트웨어 생태계에도 큰 
 <h2><a class="article-link-title" href="/note/safari.html">사파리</a></h2>
 <div class="article-link-date">
 2020년 5월 28일 수정</div>
-</div>
-</div>
-<div class="article-link">
-<div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/swift.html">Swift</a></h2>
-<div class="article-link-date">
-2020년 5월 27일 수정</div>
 </div>
 </div>
 <div class="article-link">
