--- a/note/swift.html
+++ b/note/swift.html
@@ -57,7 +57,7 @@
 <section class="content">
 <header>
 <h1>Swift</h1>
-<div class="title-date">2020년 5월 27일 수정</div>
+<div class="title-date">2020년 6월 16일 수정</div>
 </header>
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
@@ -270,7 +270,7 @@ A 구조체의 테이블보다 우선 검색된다는 말이 된다.
 <li><a target="_blank" href="https://github.com/apple/swift-evolution/blob/master/proposals/0266-synthesized-comparable-for-enumerations.md">🌏Synthesized <code>Comparable</code> conformance for <code>enum</code> types (SE-0266)</a>:
 <code>enum</code> 타입을 기본 값 없이도 비교할 수 있게 된다. 아마도 코딩 된 순서대로 크기가 결정되는 것 같다.</li>
 <li><a target="_blank" href="https://github.com/apple/swift-evolution/blob/master/proposals/0269-implicit-self-explicit-capture.md">🌏Increase availability of implicit <code>self</code> in <code>@escaping</code> closures when reference cycles are unlikely to occur (SE-0269)</a>:
-클로저 내부 등 일부는 <code>self</code> 의 표기가 강제되었던 곳이 많았는데 이제 꼭 필요한 경우가 아니라면 생략해도 된다.
+<a href="closure.html">클로저</a> 내부 등 일부는 <code>self</code> 의 표기가 강제되었던 곳이 많았는데 이제 꼭 필요한 경우가 아니라면 생략해도 된다.
 <a href="swiftui.html">SwiftUI</a> 관련 코딩 시 약간 코드가 줄어들어서 편리해 질 것 같다.</li>
 <li><a target="_blank" href="https://github.com/apple/swift-evolution/blob/master/proposals/0281-main-attribute.md">🌏<code>@main</code>: Type-Based Program Entry Points (SE-0281)</a>:
 <code>@main</code> 키워드를 통해 프로그램 진입점(entry point)을 지정할 수 있게 되었다.
@@ -394,9 +394,30 @@ A 구조체의 테이블보다 우선 검색된다는 말이 된다.
 <hr /><h1>이 글을 링크하는 글들</h1>
 <div class="article-link">
 <div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/arc.html">ARC</a></h2>
+<div class="article-link-date">
+2020년 6월 16일 수정</div>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/closure.html">클로저</a></h2>
+<div class="article-link-date">
+2020년 6월 16일 수정</div>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/objective-c.html">Objective-C</a></h2>
+<div class="article-link-date">
+2020년 6월 16일 수정</div>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/python.html">Python</a></h2>
 <div class="article-link-date">
-2020년 6월 12일 수정</div>
+2020년 6월 15일 수정</div>
 </div>
 </div>
 <div class="article-link">
@@ -416,13 +437,6 @@ A 구조체의 테이블보다 우선 검색된다는 말이 된다.
 <div class="article-link">
 <div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/definition.html">정의</a></h2>
-<div class="article-link-date">
-2020년 5월 30일 수정</div>
-</div>
-</div>
-<div class="article-link">
-<div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/objective-c.html">Objective-C</a></h2>
 <div class="article-link-date">
 2020년 5월 30일 수정</div>
 </div>
