--- a/note/appkit.html
+++ b/note/appkit.html
@@ -134,6 +134,13 @@ Cocoa Touch은 <a href="ios.html">iOS</a>용 프레임워크이고
 <hr /><h1>이 글을 링크하는 글들</h1>
 <div class="article-link">
 <div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/arc.html">ARC</a></h2>
+<div class="article-link-date">
+2020년 6월 16일 수정</div>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/uikit.html">UIKit</a></h2>
 <div class="article-link-date">
 2020년 6월 11일 수정</div>
