--- a/note/index.html
+++ b/note/index.html
@@ -58,6 +58,34 @@
 <h1><i class="material-icons md-light">list_alt</i> NOTE의 모든 글</h1>
 <div class="article-link">
 <div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/swift.html">Swift</a></h2>
+<div class="article-link-date">
+2020년 6월 16일 수정</div>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/arc.html">ARC</a></h2>
+<div class="article-link-date">
+2020년 6월 16일 수정</div>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/closure.html">클로저</a></h2>
+<div class="article-link-date">
+2020년 6월 16일 수정</div>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/objective-c.html">Objective-C</a></h2>
+<div class="article-link-date">
+2020년 6월 16일 수정</div>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/doom-emacs.html">Doom Emacs</a></h2>
 <div class="article-link-date">
 2020년 6월 15일 수정</div>
@@ -261,13 +289,6 @@
 </div>
 <div class="article-link">
 <div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/objective-c.html">Objective-C</a></h2>
-<div class="article-link-date">
-2020년 5월 30일 수정</div>
-</div>
-</div>
-<div class="article-link">
-<div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/implementation.html">구현</a></h2>
 <div class="article-link-date">
 2020년 5월 30일 수정</div>
@@ -313,13 +334,6 @@
 <h2><a class="article-link-title" href="/note/safari.html">사파리</a></h2>
 <div class="article-link-date">
 2020년 5월 28일 수정</div>
-</div>
-</div>
-<div class="article-link">
-<div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/swift.html">Swift</a></h2>
-<div class="article-link-date">
-2020년 5월 27일 수정</div>
 </div>
 </div>
 <div class="article-link">
