update with 8 changes

--- a/note/dockerfile.html
+++ b/note/dockerfile.html
@@ -57,7 +57,7 @@
 <section class="content">
 <header>
 <h1>Dockerfile</h1>
-<div class="title-date">2020년 6월 8일 수정</div>
+<div class="title-date">2020년 6월 17일 수정</div>
 </header>
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
@@ -72,7 +72,7 @@
 </div>
 <p>
 Dockerfile은 <a href="docker.html">Docker</a> 용 이미지를 빌드하기 위한
-특수한 DSL 스크립트 언어로 작성하는 스펙 파일이다.
+특수한 <a href="dsl.html">DSL</a> 스크립트 언어로 작성하는 스펙 파일이다.
 </p>
 
 <div id="outline-container-39a2e4c2" class="outline-2">
@@ -208,16 +208,23 @@ Dockerfile은 <a href="docker.html">Docker</a> 용 이미지를 빌드하기 위
 <hr /><h1>이 글을 링크하는 글들</h1>
 <div class="article-link">
 <div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/docker.html">Docker</a></h2>
+<h2><a class="article-link-title" href="/note/dsl.html">DSL</a></h2>
 <div class="article-link-date">
-2020년 6월 1일 수정</div>
+2020년 6월 17일 수정</div>
 </div>
 </div>
 <div class="article-link">
 <div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/docker-compose.html">Docker Compose</a></h2>
 <div class="article-link-date">
-2020년 5월 9일 수정</div>
+2020년 6월 17일 수정</div>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/docker.html">Docker</a></h2>
+<div class="article-link-date">
+2020년 6월 1일 수정</div>
 </div>
 </div>
 </div>
