--- a/note/python.html
+++ b/note/python.html
@@ -525,6 +525,13 @@ Python 3 부터 사용 가능한 커맨드다.
 <hr /><h1>이 글을 링크하는 글들</h1>
 <div class="article-link">
 <div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/yaml.html">YAML</a></h2>
+<div class="article-link-date">
+2020년 6월 17일 수정</div>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/javascript.html">Javascript</a></h2>
 <div class="article-link-date">
 2020년 6월 15일 수정</div>
