update with 4 changes

--- a/note/yaml.html
+++ b/note/yaml.html
@@ -200,14 +200,14 @@ list2:
 위의 표현을 JSON으로 표현하자면 아래와 같다.
 </p>
 <div class="org-src-container">
-<pre class="src src-json">item<span style="color: #a9a1e1;">3</span>: [
+<pre class="src src-json"><span style="color: #51afef;">"item3"</span>: [
   {
-    subdict<span style="color: #a9a1e1;">1</span>-item<span style="color: #a9a1e1;">1</span>: <span style="color: #da8548; font-weight: bold;">1</span>,
-    subdict<span style="color: #a9a1e1;">1</span>-item<span style="color: #a9a1e1;">2</span>: <span style="color: #da8548; font-weight: bold;">2</span>
+    <span style="color: #51afef;">"subdict1-item1"</span>: <span style="color: #da8548; font-weight: bold;">1</span>,
+    <span style="color: #51afef;">"subdict1-item2"</span>: <span style="color: #da8548; font-weight: bold;">2</span>
   },
   {
-    subdict<span style="color: #a9a1e1;">2</span>-item<span style="color: #a9a1e1;">1</span>: <span style="color: #da8548; font-weight: bold;">3</span>,
-    subdict<span style="color: #a9a1e1;">2</span>-item<span style="color: #a9a1e1;">2</span>: <span style="color: #da8548; font-weight: bold;">4</span>
+    <span style="color: #51afef;">"subdict2-item1"</span>: <span style="color: #da8548; font-weight: bold;">3</span>,
+    <span style="color: #51afef;">"subdict2-item2"</span>: <span style="color: #da8548; font-weight: bold;">4</span>
   }
 ]
 </pre>
