--- a/note/yaml.html
+++ b/note/yaml.html
@@ -73,7 +73,7 @@
 </div>
 </div>
 <p>
-YAML은 비슷하게 데이터를 표현하기 위한 특수한 언어다. JSON과 비슷하게 생각할 수도 있지만 표현 방법이 좀 더 간결한 편이다.
+YAML은 데이터를 표현하기 위한 특수한 언어다. JSON과 비슷하게 생각할 수도 있지만 표현 방법이 좀 더 간결한 편이다.
 </p>
 
 <p>
