update with 12 changes

--- a/note/closure.html
+++ b/note/closure.html
@@ -220,7 +220,7 @@ int (^selfAdder)(int) = ^int(int y) {
 <h2 id="3c86f914">Python의 클로저와 람다 함수</h2>
 <div class="outline-text-2" id="text-3c86f914">
 <p>
-<a href="python.html">Python</a>의 경우는 앞서 소개한 것들과 약간 다르게 익명이라기 보다는 그냥 동적으로 생성되는 함수 정도의 소개가 맞는 수준으로 사용할 수 있다.
+<a href="python.html">Python</a>의 경우는 앞서 소개한 것들과 약간 다르게 익명이라기 보다는 그냥 동적으로 생성되는 함수 정도의 소개가 맞는 것 같다.
 </p>
 <div class="org-src-container">
 <pre class="src src-python">&gt;&gt;&gt; <span style="color: #51afef;">def</span> <span style="color: #c678dd;">gen_closure</span>(x):
