--- a/note/curl.html
+++ b/note/curl.html
@@ -57,7 +57,7 @@
 <section class="content">
 <header>
 <h1>Curl</h1>
-<div class="title-date">2020년 6월 13일 수정</div>
+<div class="title-date">2020년 6월 18일 수정</div>
 </header>
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
@@ -166,7 +166,7 @@ POST로 폼(form) 데이터를 함께 요청하려면 <code>-d</code> 옵션을 
 </pre>
 </div>
 <p>
-JSON 데이터를 POST 하려면 헤더가 별도로 필요하다.
+<a href="json.html">JSON</a> 데이터를 POST 하려면 헤더가 별도로 필요하다.
 </p>
 <div class="org-src-container">
 <pre class="src src-bash"><span style="color: #ECBE7B;">curl</span> -H <span style="color: #98be65;">'Content-Type: application/json'</span> -d <span style="color: #98be65;">'{"foo": "bar"}'</span> https://foo.bar
@@ -239,7 +239,7 @@ REST API를 개발할 때 테스트 용도로 자주 쓸 만하다.
 <div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/web-dev-links.html">웹 개발 관련 링크</a></h2>
 <div class="article-link-date">
-2020년 6월 13일 수정</div>
+2020년 6월 15일 수정</div>
 </div>
 </div>
 </div>
