--- a/note/javascript.html
+++ b/note/javascript.html
@@ -562,6 +562,13 @@ targetElement.parentNode.insertBefore(newElement, targetElement)
 <hr /><h1>이 글을 링크하는 글들</h1>
 <div class="article-link">
 <div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/json.html">JSON</a></h2>
+<div class="article-link-date">
+2020년 6월 18일 수정</div>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/closure.html">클로저</a></h2>
 <div class="article-link-date">
 2020년 6월 17일 수정</div>
